Donation button flow and PayPal integration

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600&display=swap" rel="stylesheet">
     <!--<script src="https://paypal.com/sdk/js?&client-id=AZ9f_hn-5Ce-1JEi-o0d1R_A0NI3VsHtXQFhSWtRyJYz9pi8u5tFqIV2nK41LivKuHx_F74wMNL0EYym&merchant-id=G273SLVCAMN6C"></script>-->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
